export type Tag = {
  id: string;
  name: string;
  color: string;
};

export type CreateTag = {
  name: string;
  color: string;
};
