@startuml
'skinparam shadowing false
'skinparam linetype ortho
title pb138 Database Diagram

entity User {
    id : INT <<PK>>
    --
    * firstName : STRING
    * lastName : STRING
    * email : STRING <<UNIQUE>>
    * hashedPassword : STRING
    * passwordSalt: STRING

    isAdmin : BOOLEAN
}

entity ProfilePicture {
    id : INT <<PK>>
    --
    * picture : BYTES
}

entity Icon {
    id : INT <<PK>>
    --
    * icon : BYTES
}

entity Notebook {
    id : INT <<PK>>
    --
    * title : STRING
    * description : STRING
    * color : STRING

    createdAt : DATETIME
    updatedAt : DATETIME
}

entity Note {
    id : INT <<PK>>
    --
    * title : STRING
    * color : STRING
    content : STRING

    createdAt : DATE TIME
    updatedAt : DATETIME
}

entity Event {
    id : INT <<PK>>
    --
    * title : STRING
    * importance : Enum{Low, Medium, High}
    * description : STRING
    * color : STRING
}

entity EventTime {
    id : INT <<PK>>
    --
    * startDateTime : DATETIME
    * endDateTime : DATETIME
}

entity FlashDeck {
    id : INT <<PK>>
    --
    * title : STRING
    * description : STRING
    * color : STRING

    createdAt : DATETIME
    updatedAt : DATETIME
}

entity FlashCard {
    id : INT <<PK>>
    --
    * question : STRING

    createdAt : DATETIME
    updatedAt : DATETIME
}

entity FlashCardAnswer {
    id : INT <<PK>>
    --
    * answer : STRING
    * isCorrect : BOOLEAN
}

entity Tag {
    id : INT <<PK>>
    --
    * tag : STRING
    * color : STRING
}

entity ">>Implicit Taggable<<" as Implicit

User            }o--|| ProfilePicture
User            ||--o{ Notebook
Notebook        ||--o{ Note
User            ||--o{ Event
Event           ||--o{ EventTime
User            ||--o{ FlashDeck
FlashDeck       ||--o{ FlashCard
FlashCard       ||--o{ FlashCardAnswer
Notebook        |o--o{ FlashDeck
Notebook        }o--|| Icon
FlashDeck       }o--|| Icon
User            ||-o{  Tag
Notebook        ||--o{ Implicit
FlashDeck       ||--o{ Implicit
Event           ||--o{ Implicit
Note            ||--o{ Implicit
Implicit        }o--|| Tag

note left of Implicit
Prisma Generated
end note
@enduml
